[gd_scene load_steps=23 format=3 uid="uid://belo5ev21hpy8"]

[ext_resource type="Texture2D" uid="uid://tehb0macxso0" path="res://assets/sprites/lvl_room/Room - Couch - 1.png" id="1_4k3f1"]
[ext_resource type="Script" uid="uid://bqij3lhm6cb1a" path="res://scripts/couch.gd" id="1_7notj"]
[ext_resource type="PackedScene" uid="uid://cocn3nc3mwbvg" path="res://scenes/landing_collision.tscn" id="2_7notj"]
[ext_resource type="Script" uid="uid://cdgbl8e0ph2uw" path="res://scripts/interactable_scratch.gd" id="3_65xhj"]
[ext_resource type="Texture2D" uid="uid://dbmrc5i2ah281" path="res://assets/sprites/lvl1/Scratches - Couch scratch 1.png" id="4_rych0"]
[ext_resource type="Texture2D" uid="uid://clfenjtshp1ie" path="res://assets/sprites/lvl1/Scratches - Couch scratch 2.png" id="5_ce677"]
[ext_resource type="Texture2D" uid="uid://ck7e81bgj6d2p" path="res://assets/sprites/lvl1/Scratches - Couch scratch 3.png" id="6_yq8nu"]
[ext_resource type="Texture2D" uid="uid://dq0ogf5agoujc" path="res://assets/sprites/lvl1/couch scratch right.png" id="7_ymlcd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0fwtn"]
size = Vector2(40, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bvd7e"]
size = Vector2(41, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6akvl"]
size = Vector2(6, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6nya"]
size = Vector2(7, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_130d8"]
size = Vector2(6, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_hxvtx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_rych0")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ce677")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_yq8nu")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cbs37"]
radius = 3.0
height = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kaqyl"]
atlas = ExtResource("7_ymlcd")
region = Rect2(0, 0, 8, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v6ji"]
atlas = ExtResource("7_ymlcd")
region = Rect2(8, 0, 8, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4mno"]
atlas = ExtResource("7_ymlcd")
region = Rect2(16, 0, 8, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_awinm"]
atlas = ExtResource("7_ymlcd")
region = Rect2(0, 20, 8, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhyen"]
atlas = ExtResource("7_ymlcd")
region = Rect2(8, 20, 8, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_3rm4b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kaqyl")
}],
"loop": false,
"name": &"1",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v6ji")
}],
"loop": false,
"name": &"2",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4mno")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_awinm")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhyen")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_re71w"]
radius = 2.9997158
height = 15.998482

[node name="Couch" type="Node2D"]
script = ExtResource("1_7notj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("1_4k3f1")

[node name="CouchSit" type="StaticBody2D" parent="."]
position = Vector2(1, -46)

[node name="Landing4" parent="CouchSit" instance=ExtResource("2_7notj")]
unique_name_in_owner = true
visible = false
position = Vector2(-1, 38)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CouchSit/Landing4"]
shape = SubResource("RectangleShape2D_0fwtn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CouchSit"]
position = Vector2(-1, 53)
shape = SubResource("RectangleShape2D_bvd7e")
one_way_collision = true

[node name="CouchLeftArmrest" type="StaticBody2D" parent="."]
position = Vector2(1, -46)

[node name="Landing3" parent="CouchLeftArmrest" instance=ExtResource("2_7notj")]
unique_name_in_owner = true
visible = false
position = Vector2(-26, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CouchLeftArmrest/Landing3"]
shape = SubResource("RectangleShape2D_6akvl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CouchLeftArmrest"]
position = Vector2(-26, 47)
shape = SubResource("RectangleShape2D_i6nya")
one_way_collision = true

[node name="CouchRightArmrest" type="StaticBody2D" parent="."]
position = Vector2(1, -46)

[node name="Landing2" parent="CouchRightArmrest" instance=ExtResource("2_7notj")]
unique_name_in_owner = true
visible = false
position = Vector2(23, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CouchRightArmrest/Landing2"]
shape = SubResource("RectangleShape2D_130d8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CouchRightArmrest"]
position = Vector2(23, 47)
shape = SubResource("RectangleShape2D_i6nya")
one_way_collision = true

[node name="CouchScratchL" type="Area2D" parent="." node_paths=PackedStringArray("target_sprites")]
position = Vector2(-25, 8)
collision_layer = 4
collision_mask = 0
script = ExtResource("3_65xhj")
target_sprites = NodePath("ScratchSpriteL")

[node name="ScratchSpriteL" type="AnimatedSprite2D" parent="CouchScratchL"]
position = Vector2(3, 0)
sprite_frames = SubResource("SpriteFrames_hxvtx")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CouchScratchL"]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_cbs37")

[node name="CouchScratchR" type="Area2D" parent="." node_paths=PackedStringArray("target_sprites")]
position = Vector2(25, 7)
collision_layer = 4
collision_mask = 0
script = ExtResource("3_65xhj")
target_sprites = NodePath("ScratchSpriteR")
animations_count = 4

[node name="ScratchSpriteR" type="AnimatedSprite2D" parent="CouchScratchR"]
sprite_frames = SubResource("SpriteFrames_3rm4b")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CouchScratchR"]
position = Vector2(-1.0000006, 4)
rotation = 0.013788337
shape = SubResource("CapsuleShape2D_re71w")

[connection signal="area_shape_entered" from="CouchScratchL" to="CouchScratchL" method="_on_area_shape_entered"]
[connection signal="area_shape_exited" from="CouchScratchL" to="CouchScratchL" method="_on_area_shape_exited"]
[connection signal="area_shape_entered" from="CouchScratchR" to="CouchScratchR" method="_on_area_shape_entered"]
[connection signal="area_shape_exited" from="CouchScratchR" to="CouchScratchR" method="_on_area_shape_exited"]

[editable path="CouchSit/Landing4"]
[editable path="CouchLeftArmrest/Landing3"]
[editable path="CouchRightArmrest/Landing2"]
